deploy: 10369c4881e698511cd075ad601174a8c94b3829

--- a/introduction/notebooks/neuroscience/cortical_maps.html
+++ b/introduction/notebooks/neuroscience/cortical_maps.html
@@ -847,16 +847,16 @@
         },
         codeMirrorConfig: {
             theme: "abcdef",
-            mode: "ex"
+            mode: "python"
         },
         kernelOptions: {
-            kernelName: "ex",
+            kernelName: "python3",
             path: "./introduction/notebooks/neuroscience"
         },
         predefinedOutput: true
     }
     </script>
-    <script>kernelName = 'ex'</script>
+    <script>kernelName = 'python3'</script>
 
               </div>
               
