deploy: 02e2ed506145b53dfec5208f68afadcf8a7401b4

--- a/outline.html
+++ b/outline.html
@@ -479,7 +479,7 @@
 </tr>
 </tbody>
 </table>
-</div>
+<iframe src="https://calendar.google.com/calendar/embed?src=stgli3pnv4h0muqpg6k5i7nbb8%40group.calendar.google.com&ctz=Europe%2FBerlin" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe></div>
 </div>
 
     <script type="text/x-thebe-config">
